# Mipscc

./: CMakeLists.txt  README.md
doc/: assemble.md  lex.md  parse.md
src/: assembler.cc  assembler.h  cmd_parser.h  lexer.cc  lexer.h  main.cc  mips_cc.cc  mips_cc.h  para_init.cc  para_init.h  parser.cc  parser.h  token.cc  token.h  type.cc  type.h
test/: test.c  test1.c
